--- a/index.html
+++ b/index.html
@@ -1,402 +1,457 @@
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="sk">
+<head>  
+  <meta charset="UTF-8">  
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  
+  <title>Matej Lakatoš | Event fotograf – Trenčín</title>  
+  
+  <meta name="description" content="Profesionálny eventový fotograf z Trenčína. Fotím koncerty, plesy a spoločenské podujatia s dôrazom na emócie a atmosféru.">  
+  <meta name="robots" content="index, follow">  
+  
+  <!-- Open Graph -->  
+  <meta property="og:title" content="Matej Lakatoš | Event fotograf">  
+  <meta property="og:description" content="Eventy, koncerty, plesy a spoločenské podujatia. Fotograf Trenčín a okolie.">  
+  <meta property="og:image" content="https://matejlakatos.online/og-image.jpg">  
+  <meta property="og:url" content="https://matejlakatos.online/">  
+  <meta property="og:type" content="website">  
+  
+  <!-- Twitter / X -->  
+  <meta name="twitter:card" content="summary_large_image">  
+  <meta name="twitter:title" content="Matej Lakatoš | Event fotograf">  
+  <meta name="twitter:description" content="Profesionálne fotenie koncertov, plesov a eventov.">  
+  <meta name="twitter:image" content="https://matejlakatos.online/og-image.jpg">  
+  
+  <!-- Favicon -->  
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">  
+</head>  
 
-  <title>Matej Lakatoš | Event fotograf – Trenčín</title>
+<style>  
 
-  <meta name="description" content="Profesionálny eventový fotograf z Trenčína. Fotím koncerty, plesy a spoločenské podujatia s dôrazom na emócie a atmosféru.">
-  <meta name="robots" content="index, follow">
+/* ===== MENU ===== */  
+.menu-btn {  
+  position: fixed;  
+  top: 20px;  
+  left: 20px;  
+  font-size: 28px;  
+  cursor: pointer;  
+  z-index: 1001;  
+  color: white;  
+}  
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Matej Lakatoš | Event fotograf">
-  <meta property="og:description" content="Eventy, koncerty, plesy a spoločenské podujatia. Fotograf Trenčín a okolie.">
-  <meta property="og:image" content="https://matejlakatos.online/og-image.jpg">
-  <meta property="og:url" content="https://matejlakatos.online/">
-  <meta property="og:type" content="website">
+.menu {  
+  position: fixed;  
+  inset: 0;  
+  background: #0b0b0b;  
+  transform: translateX(-100%);  
+  transition: 0.4s;  
+  z-index: 1000;  
+  padding: 80px 40px;  
+}  
 
-  <!-- Twitter / X -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Matej Lakatoš | Event fotograf">
-  <meta name="twitter:description" content="Profesionálne fotenie koncertov, plesov a eventov.">
-  <meta name="twitter:image" content="https://matejlakatos.online/og-image.jpg">
+.menu.active {  
+  transform: translateX(0);  
+}  
 
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-</head>
-<style>
+.menu a {  
+  display: block;  
+  margin: 25px 0;  
+  font-size: 1.6rem;  
+  color: white;  
+  text-decoration: none;  
+}  
 
+.menu a:hover {  
+  opacity: 0.7;  
+}  
 
-/* ===== MENU ===== */
-.menu-btn {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  font-size: 28px;
-  cursor: pointer;
-  z-index: 1001;
-  color: white;
-}
+/* ===== TVOJ PÔVODNÝ ŠTÝL – NIČ NEVYHODENÉ ===== */  
 
-.menu {
-  position: fixed;
-  inset: 0;
-  background: #0b0b0b;
-  transform: translateX(-100%);
-  transition: 0.4s;
-  z-index: 1000;
-  padding: 80px 40px;
-}
+.section-divider {  
+  display: flex;  
+  align-items: center;  
+  justify-content: center;  
+  gap: 20px;  
+  margin: 80px 0 30px;  
+}  
 
-.menu.active {
-  transform: translateX(0);
-}
+.section-divider span {  
+  width: 60px;  
+  height: 1px;  
+  background: rgba(255,255,255,0.35);  
+}  
 
-.menu a {
-  display: block;
-  margin: 25px 0;
-  font-size: 1.6rem;
-  color: white;
-  text-decoration: none;
-}
+.section-divider h2 {  
+  font-size: 1.8rem;  
+  font-weight: 500;  
+  letter-spacing: 1px;  
+}  
 
-.menu a:hover {
-  opacity: 0.7;
-}
+* { box-sizing: border-box; }  
 
-/* ===== TVOJ PÔVODNÝ ŠTÝL – NIČ NEVYHODENÉ ===== */
+body {  
+  margin: 0;  
+  font-family: Arial, sans-serif;  
+  background: #0b0b0b;  
+  color: #f5f5f5;  
+}  
 
-.section-divider {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  margin: 80px 0 30px;
-}
+/* HERO */  
+.hero {  
+  position: relative;  
+  height: 100vh;  
+  background: url("hero.jpg") center / cover no-repeat;  
+  display: flex;  
+  align-items: center;  
+  justify-content: center;  
+  color: white;  
+  text-align: center;  
+}  
 
-.section-divider span {
-  width: 60px;
-  height: 1px;
-  background: rgba(255,255,255,0.35);
-}
+.hero::after {  
+  content: "";  
+  position: absolute;  
+  inset: 0;  
+  background: rgba(0, 0, 0, 0.35);  
+  pointer-events: none;  
+}  
 
-.section-divider h2 {
-  font-size: 1.8rem;
-  font-weight: 500;
-  letter-spacing: 1px;
-}
+.hero-content {  
+  position: relative;  
+  z-index: 2;  
+  max-width: 800px;  
+  padding: 20px;  
+}  
 
-* { box-sizing: border-box; }
+.hero h1 {  
+  font-size: 3rem;  
+  margin-bottom: 10px;  
+}  
 
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #0b0b0b;
-  color: #f5f5f5;
-}
+.hero h2 {  
+  font-size: 1.4rem;  
+  font-weight: 400;  
+  opacity: 0.9;  
+}  
 
-/* HERO */
-.hero {
-  position: relative;
-  height: 100vh;
-  background: url("hero.jpg") center / cover no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  text-align: center;
-}
+/* kontakt */  
+.contact-box {  
+  margin-top: 30px;  
+}  
 
-.hero::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.35);
-  pointer-events: none;
-}
+.contact-text {  
+  margin-bottom: 12px;  
+  opacity: 0.85;  
+}  
 
-.hero-content {
-  position: relative;
-  z-index: 2;
-  max-width: 800px;
-  padding: 20px;
-}
+.contact-links {  
+  display: flex;  
+  gap: 15px;  
+  justify-content: center;  
+  flex-wrap: wrap;  
+}  
 
-.hero h1 {
-  font-size: 3rem;
-  margin-bottom: 10px;
-}
+.contact-links a {  
+  padding: 12px 18px;  
+  border: 1px solid rgba(255,255,255,0.6);  
+  border-radius: 25px;  
+  color: white;  
+  text-decoration: none;  
+  transition: 0.3s;  
+}  
 
-.hero h2 {
-  font-size: 1.4rem;
-  font-weight: 400;
-  opacity: 0.9;
-}
+.contact-links a:hover {  
+  background: white;  
+  color: black;  
+}  
 
-/* kontakt */
-.contact-box {
-  margin-top: 30px;
-}
+/* šípka */  
+.scroll-indicator {  
+  position: absolute;  
+  bottom: 25px;  
+  left: 50%;  
+  transform: translateX(-50%);  
+  width: 30px;  
+  height: 50px;  
+  border: 2px solid rgba(255,255,255,0.7);  
+  border-radius: 20px;  
+  display: flex;  
+  justify-content: center;  
+  padding-top: 8px;  
+  cursor: pointer;  
+  z-index: 2;  
+}  
 
-.contact-text {
-  margin-bottom: 12px;
-  opacity: 0.85;
-}
+.scroll-indicator span {  
+  width: 6px;  
+  height: 10px;  
+  background: white;  
+  border-radius: 3px;  
+  animation: scrollDown 1.5s infinite;  
+}  
 
-.contact-links {
-  display: flex;
-  gap: 15px;
-  justify-content: center;
-  flex-wrap: wrap;
-}
+@keyframes scrollDown {  
+  from { transform: translateY(0); opacity: 1; }  
+  to { transform: translateY(18px); opacity: 0; }  
+}  
 
-.contact-links a {
-  padding: 12px 18px;
-  border: 1px solid rgba(255,255,255,0.6);
-  border-radius: 25px;
-  color: white;
-  text-decoration: none;
-  transition: 0.3s;
-}
+/* ABOUT */  
+.about {  
+  max-width: 900px;  
+  margin: 90px auto 40px;  
+  padding: 0 20px;  
+  text-align: center;  
+}  
 
-.contact-links a:hover {
-  background: white;
-  color: black;
-}
+.about p {  
+  opacity: 0.8;  
+  line-height: 1.7;  
+  font-size: 1.08rem;  
+}  
 
-/* šípka */
-.scroll-indicator {
-  position: absolute;
-  bottom: 25px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 30px;
-  height: 50px;
-  border: 2px solid rgba(255,255,255,0.7);
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  padding-top: 8px;
-  cursor: pointer;
-  z-index: 2;
-}
+/* REVIEWS */  
+.reviews {  
+  max-width: 1000px;  
+  margin: 60px auto;  
+  padding: 0 20px;  
+  display: grid;  
+  gap: 20px;  
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));  
+}  
 
-.scroll-indicator span {
-  width: 6px;
-  height: 10px;
-  background: white;
-  border-radius: 3px;
-  animation: scrollDown 1.5s infinite;
-}
+.review {  
+  background: #161616;  
+  padding: 25px;  
+  border-radius: 14px;  
+  font-size: 0.95rem;  
+}  
 
-@keyframes scrollDown {
-  from { transform: translateY(0); opacity: 1; }
-  to { transform: translateY(18px); opacity: 0; }
-}
+.review span {  
+  display: block;  
+  margin-top: 12px;  
+  font-weight: bold;  
+  opacity: 0.75;  
+}  
 
-/* ABOUT */
-.about {
-  max-width: 900px;
-  margin: 90px auto 40px;
-  padding: 0 20px;
-  text-align: center;
-}
+/* GALLERY */  
+.gallery {  
+  display: grid;  
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));  
+  gap: 16px;  
+  padding: 20px;  
+  max-width: 1400px;  
+  margin: auto;  
+}  
 
-.about p {
-  opacity: 0.8;
-  line-height: 1.7;
-  font-size: 1.08rem;
-}
+.gallery img {  
+  width: 100%;  
+  border-radius: 14px;  
+  cursor: pointer;  
+  transition: transform 0.3s ease;  
+}  
 
-/* REVIEWS */
-.reviews {
-  max-width: 1000px;
-  margin: 60px auto;
-  padding: 0 20px;
-  display: grid;
-  gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-}
+.gallery img:hover {  
+  transform: scale(1.03);  
+}  
 
-.review {
-  background: #161616;
-  padding: 25px;
-  border-radius: 14px;
-  font-size: 0.95rem;
-}
+/* LIGHTBOX */  
+.lightbox {  
+  position: fixed;  
+  inset: 0;  
+  background: rgba(0,0,0,0.95);  
+  display: none;  
+  align-items: center;  
+  justify-content: center;  
+  z-index: 999;  
+}  
 
-.review span {
-  display: block;
-  margin-top: 12px;
-  font-weight: bold;
-  opacity: 0.75;
-}
+.lightbox img {  
+  max-width: 90%;  
+  max-height: 90%;  
+  border-radius: 10px;  
+}  
 
-/* GALLERY */
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 16px;
-  padding: 20px;
-  max-width: 1400px;
-  margin: auto;
-}
+.lightbox.active {  
+  display: flex;  
+}  
 
-.gallery img {
-  width: 100%;
-  border-radius: 14px;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-}
+footer {  
+  text-align: center;  
+  padding: 40px 20px;  
+  font-size: 0.9rem;  
+  opacity: 0.55;  
+}  
 
-.gallery img:hover {
-  transform: scale(1.03);
-}
+/* ===== FORMULÁR (NOVÉ) ===== */  
+.contact-form-section {  
+  max-width: 700px;  
+  margin: 100px auto;  
+  padding: 0 20px;  
+  text-align: center;  
+}  
 
-/* LIGHTBOX */
-.lightbox {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.95);
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 999;
-}
+.contact-form-section h2 {  
+  margin-bottom: 10px;  
+}  
 
-.lightbox img {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 10px;
-}
+.contact-form-section p {  
+  opacity: 0.75;  
+  margin-bottom: 30px;  
+}  
 
-.lightbox.active {
-  display: flex;
-}
+.contact-form {  
+  display: grid;  
+  gap: 14px;  
+}  
 
-footer {
-  text-align: center;
-  padding: 40px 20px;
-  font-size: 0.9rem;
-  opacity: 0.55;
-}
-/* ===== SCROLL ANIMATIONS ===== */
-.reveal {
-  opacity: 0;
-  transform: translateY(40px);
-  transition: all 0.8s ease;
-}
+.contact-form input,  
+.contact-form textarea {  
+  background: #161616;  
+  border: 1px solid rgba(255,255,255,0.25);  
+  border-radius: 10px;  
+  padding: 14px;  
+  color: white;  
+  font-size: 1rem;  
+}  
 
-.reveal.active {
-  opacity: 1;
-  transform: translateY(0);
-}
-</style>
-</head>
+.contact-form button {  
+  padding: 14px;  
+  border-radius: 25px;  
+  border: none;  
+  background: white;  
+  color: black;  
+  font-size: 1rem;  
+  cursor: pointer;  
+}  
 
-<body>
+</style>  
 
-<!-- MENU -->
-<div class="menu-btn" onclick="toggleMenu()">☰</div>
-<nav class="menu" id="menu">
-  <a href="galeria.html">Galéria</a>
-  <a href="cennik.html">Cenník služieb</a>
-  <a href="about.html">About</a>
-  <a href="kontakt.html">Kontakt</a>
-</nav>
+</head>  
 
-<section class="hero">
-  <div class="hero-content">
-    <h1>Matej Lakatoš</h1>
-    <h2>Event fotograf Trenčín · Koncerty · Plesy · Spoločenské udalosti</h2>
+<body>  
 
-    <div class="contact-box">
-      <p class="contact-text">Kontaktujte ma tu👇 </p>
-      <div class="contact-links">
-        <a href="tel:+421907323158">📞 Telefón</a>
-        <a href="mailto:matej.lakatos06@gmail.com">✉️ Email</a>
-        <a href="https://instagram.com/matej_lakatos" target="_blank">📸 Instagram</a>
-      </div>
-    </div>
-  </div>
+<!-- MENU -->  
+<div class="menu-btn" onclick="toggleMenu()">☰</div>  
+<nav class="menu" id="menu">  
+  <a href="galeria.html">Galéria</a>  
+  <a href="cennik.html">Cenník služieb</a>  
+  <a href="about.html">About</a>  
+  <a href="kontakt.html">Kontakt</a>  
+</nav>  
 
-  <div class="scroll-indicator" onclick="scrollDown()">
-    <span></span>
-  </div>
+<section class="hero">  
+  <div class="hero-content">  
+    <h1>Matej Lakatoš</h1>  
+    <h2>Event fotograf Trenčín · Koncerty · Plesy · Spoločenské udalosti</h2>  
+
+    <div class="contact-box">  
+      <p class="contact-text">Kontaktujte ma tu👇 </p>  
+      <div class="contact-links">  
+        <a href="tel:+421907323158">📞 Telefón</a>  
+        <a href="mailto:matej.lakatos06@gmail.com">✉️ Email</a>  
+        <a href="https://instagram.com/matej_lakatos" target="_blank">📸 Instagram</a>  
+      </div>  
+    </div>  
+  </div>  
+
+  <div class="scroll-indicator" onclick="scrollDown()">  
+    <span></span>  
+  </div>  
+</section>  
+
+<section class="about">  
+  <p>  
+    Som fotograf zameraný na koncerty, plesy a spoločenské udalosti.  
+    Zachytávam atmosféru, emócie a dôležité momenty tak,  
+    aby mali hodnotu aj po rokoch.  
+    Pracujem spoľahlivo, rýchlo a s citom pre detail.  
+  </p>  
+</section>  
+
+<section class="reviews">  
+  <div class="review">  
+    „Fotky z koncertu vystihli presne tú atmosféru, ktorú sme chceli zachovať.“  
+    <span> — organizátor koncertu</span>  
+  </div>  
+  <div class="review">  
+    „Profesionálny prístup počas celého plesu, výsledné fotky mali veľký úspech.“  
+    <span> — školský ples</span>  
+  </div>  
+  <div class="review">  
+    „Zachytené všetky dôležité momenty oslavy, komunikácia aj dodanie na jednotku.“  
+    <span> — rodinná oslava</span>  
+  </div>  
+</section>  
+
+<section class="gallery">  
+  <img src="B6.jpg" loading="lazy">  
+  <img src="foto1.jpg" loading="lazy">  
+  <img src="foto2.jpg" loading="lazy">  
+  <img src="foto3.jpg" loading="lazy">  
+  <img src="foto4.jpg" loading="lazy">  
+  <img src="foto6.jpg" loading="lazy">  
+  <img src="foto7.jpg" loading="lazy">  
+  <img src="foto8.jpg" loading="lazy">  
+  <img src="foto9.jpg" loading="lazy">  
+  <img src="foto10.jpg" loading="lazy">  
+  <img src="godzone.24-19.jpg" loading="lazy">  
+  <img src="foto12.jpg" loading="lazy">  
+</section>  
+
+<!-- ===== FORMULÁR (NOVÉ) ===== -->
+<section class="contact-form-section">
+  <h2>Spolupráca / Odovzdanie hotových fotiek</h2>
+  <p>Napíšte mi základné informácie o akcii alebo spolupráci.</p>
+
+  <form
+    class="contact-form"
+    action="https://formspree.io/f/maqqypaj"
+    method="POST">
+
+    <input type="text" name="name" placeholder="Meno / Organizácia" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <textarea name="message" rows="5" placeholder="Správa" required></textarea>
+
+    <input type="hidden" name="_redirect" value="https://matejlakatos.online/thank-you.html">
+
+    <button type="submit">Odoslať správu</button>
+  </form>
 </section>
 
-<section class="about">
-  <p>
-    Som fotograf zameraný na koncerty, plesy a spoločenské udalosti.
-    Zachytávam atmosféru, emócie a dôležité momenty tak,
-    aby mali hodnotu aj po rokoch.
-    Pracujem spoľahlivo, rýchlo a s citom pre detail.
-  </p>
-</section>
+<div class="lightbox" id="lightbox">  
+  <img src="" alt="">  
+</div>  
 
-<section class="reviews">
-  <div class="review">
-    „Fotky z koncertu vystihli presne tú atmosféru, ktorú sme chceli zachovať.“
-    <span> — organizátor koncertu</span>
-  </div>
-  <div class="review">
-    „Profesionálny prístup počas celého plesu, výsledné fotky mali veľký úspech.“
-    <span> — školský ples</span>
-  </div>
-  <div class="review">
-    „Zachytené všetky dôležité momenty oslavy, komunikácia aj dodanie na jednotku.“
-    <span> — rodinná oslava</span>
-  </div>
-</section>
+<footer>  
+  © Matej Lakatoš · Fotograf Trenčín  
+</footer>  
 
-<section class="gallery">
-  <img src="B6.jpg" loading="lazy">
-  <img src="foto1.jpg" loading="lazy">
-  <img src="foto2.jpg" loading="lazy">
-  <img src="foto3.jpg" loading="lazy">
-  <img src="foto4.jpg" loading="lazy">
-  <img src="foto6.jpg" loading="lazy">
-  <img src="foto7.jpg" loading="lazy">
-  <img src="foto8.jpg" loading="lazy">
-  <img src="foto9.jpg" loading="lazy">
-  <img src="foto10.jpg" loading="lazy">
-  <img src="godzone.24-19.jpg" loading="lazy">
-  <img src="foto12.jpg" loading="lazy">
-</section>
+<script>  
+function toggleMenu() {  
+  document.getElementById("menu").classList.toggle("active");  
+}  
 
-<div class="lightbox" id="lightbox">
-  <img src="" alt="">
-</div>
+const lightbox = document.getElementById("lightbox");  
+const lightboxImg = lightbox.querySelector("img");  
 
-<footer>
-  © Matej Lakatoš · Fotograf Trenčín
-</footer>
+document.querySelectorAll(".gallery img").forEach(img => {  
+  img.addEventListener("click", () => {  
+    lightboxImg.src = img.src;  
+    lightbox.classList.add("active");  
+  });  
+});  
 
-<script>
-function toggleMenu() {
-  document.getElementById("menu").classList.toggle("active");
-}
+lightbox.addEventListener("click", () => {  
+  lightbox.classList.remove("active");  
+});  
 
-const lightbox = document.getElementById("lightbox");
-const lightboxImg = lightbox.querySelector("img");
+function scrollDown() {  
+  const nextSection = document.querySelector('section + section');  
+  if (nextSection) {  
+    nextSection.scrollIntoView({ behavior: 'smooth' });  
+  }  
+}  
+</script>  
 
-document.querySelectorAll(".gallery img").forEach(img => {
-  img.addEventListener("click", () => {
-    lightboxImg.src = img.src;
-    lightbox.classList.add("active");
-  });
-});
-
-lightbox.addEventListener("click", () => {
-  lightbox.classList.remove("active");
-});
-
-function scrollDown() {
-  const nextSection = document.querySelector('section + section');
-  if (nextSection) {
-    nextSection.scrollIntoView({ behavior: 'smooth' });
-  }
-}
-</script>
-
-</body>
+</body>  
 </html>
